--- a/po/com.vysp3r.ProtonPlus.pot
+++ b/po/com.vysp3r.ProtonPlus.pot
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: com.vysp3r.ProtonPlus\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2025-07-03 15:09-0400\n"
+"POT-Creation-Date: 2025-07-03 19:03-0400\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -607,18 +607,22 @@ msgid "Wine build with the Staging patchset and many other useful patches."
 msgstr ""
 
 #: src/main.vala:34
-msgid "Vulkan-based implementation of Direct3D 8, 9, 10 and 11 for Linux/Wine."
+msgid "Wine build modified by Valve and other contributors."
 msgstr ""
 
 #: src/main.vala:35
-msgid "DXVK Builds that work with pre-Vulkan 1.3 versions"
+msgid "Vulkan-based implementation of Direct3D 8, 9, 10 and 11 for Linux/Wine."
 msgstr ""
 
 #: src/main.vala:36
-msgid "DXVK Async Builds that work with pre-Vulkan 1.3 versions"
+msgid "DXVK Builds that work with pre-Vulkan 1.3 versions"
 msgstr ""
 
 #: src/main.vala:37
+msgid "DXVK Async Builds that work with pre-Vulkan 1.3 versions"
+msgstr ""
+
+#: src/main.vala:38
 msgid ""
 "Variant of Wine's VKD3D which aims to implement the full Direct3D 12 API on "
 "top of Vulkan."
