--- a/po/zh_TW.po
+++ b/po/zh_TW.po
@@ -7,7 +7,7 @@ msgstr ""
 "Project-Id-Version: com.vysp3r.ProtonPlus\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2025-07-03 19:03-0400\n"
-"PO-Revision-Date: 2025-07-02 00:32+0800\n"
+"PO-Revision-Date: 2025-07-04 20:18+0800\n"
 "Last-Translator: nick.exe <nick.exe@gmail.com>\n"
 "Language-Team: CodeBay.IN\n"
 "Language: zh_TW\n"
@@ -58,13 +58,12 @@ msgid "Games"
 msgstr "遊戲庫"
 
 #: src/widgets/window.vala:93
-#, fuzzy
 msgid "An error ocurred"
 msgstr "發生錯誤"
 
 #: src/widgets/window.vala:93
 msgid "There was an error when trying to load the launchers."
-msgstr ""
+msgstr "嘗試載入啟動器時發生錯誤。"
 
 #: src/widgets/window.vala:93 src/widgets/runners/remove-dialog.vala:49
 #: src/widgets/runners/install-dialog.vala:54
@@ -563,22 +562,20 @@ msgid "Custom Proton build for running Windows games, based on Wine-tkg."
 msgstr "基於 Wine-tkg 的，運行 Windows 遊戲的自訂 Proton 建構版本。"
 
 #: src/main.vala:23
-#, fuzzy
 msgid ""
 "Steam compatibility tool based on Proton-GE with modifications for very old "
 "GPUs, with DXVK."
 msgstr ""
-"基於 Proton-GE 的 Steam 相容性工具，包含對非常舊的 GPU 進行的修改，並包含 "
-"%s。"
+"基於 Proton-GE 的 Steam 相容性工具，包含對非常舊的 GPU 進行的修改，以及 "
+"DXVK。"
 
 #: src/main.vala:24
-#, fuzzy
 msgid ""
 "Steam compatibility tool based on Proton-GE with modifications for very old "
 "GPUs, with DXVK-Async."
 msgstr ""
-"基於 Proton-GE 的 Steam 相容性工具，包含對非常舊的 GPU 進行的修改，並包含 "
-"%s。"
+"基於 Proton-GE 的 Steam 相容性工具，包含對非常舊的 GPU 進行的修改，以及 DXVK-"
+"Async。"
 
 #: src/main.vala:25
 msgid ""
@@ -632,12 +629,11 @@ msgstr "適用於 Linux/Wine 的，基於 Vulkan 的 Direct3D 8、9、10 和 11 
 
 #: src/main.vala:36
 msgid "DXVK Builds that work with pre-Vulkan 1.3 versions"
-msgstr "適用於 Vulkan 1.3 之前的 DXVK 建構版本。"
+msgstr "適用於 Vulkan 1.3 之前版本的 DXVK 建構版本。"
 
 #: src/main.vala:37
-#, fuzzy
 msgid "DXVK Async Builds that work with pre-Vulkan 1.3 versions"
-msgstr "適用於 Vulkan 1.3 之前的 DXVK 建構版本。"
+msgstr "適用於 Vulkan 1.3 之前版本的 DXVK-Async 建構版本。"
 
 #: src/main.vala:38
 msgid ""
